--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,9 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/menuSettings"
-        android:title="Settings"/>
-    <item android:title="Logout"
-        android:id="@+id/menuLogout"/>
+    <item
+        android:id="@+id/menuSettings"
+        android:title="@string/settings" />
+    <item
+        android:id="@+id/menuLogout"
+        android:title="@string/logout" />
 
 </menu>
